Troca do titulo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD:horario_mundo.html
     <title>Horário Mundial</title>
-=======
     <title>Horário Mundial - Minerva Foods</title>
->>>>>>> 253fcd656cd60e234c69065c4eeb746879334ca9:index.html
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,7 +45,7 @@
     </style>
 </head>
 <body>
-    <h1>Horários Mundiais</h1>
+    <h1>Horário Mundial</h1>
     <div class="map-container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/World_map_-_low_resolution.svg" alt="Mapa mundi" class="map">
         <div class="clock" id="melbourne"></div>
